Add tests and experiment scripts

--- a/docs/final_report/article_4.tex
+++ b/docs/final_report/article_4.tex
@@ -40,7 +40,7 @@ BCOR5mm, % Binding correction
 
 %\subtitle{Subtitle} % Uncomment to display a subtitle
 
-\author{\spacedlowsmallcaps{John Smith* \& James Smith\textsuperscript{1}}} % The article author(s) - author affiliations need to be specified in the AUTHOR AFFILIATIONS block
+\author{\spacedlowsmallcaps{Joseph Wilson \& Chuck Garcia}} % The article author(s) - author affiliations need to be specified in the AUTHOR AFFILIATIONS block
 
 \date{} % An optional date to appear under the author(s)
 
@@ -78,7 +78,8 @@ BCOR5mm, % Binding correction
 
 \section*{Abstract} % This section will not appear in the table of contents due to the star (\section*)
 
-\lipsum[1] % Dummy text
+% cdof is an blank
+\input{abstract.tex}
 
 %----------------------------------------------------------------------------------------
 %	AUTHOR AFFILIATIONS
